# SFML_Game_Template

./: .gitignore  CMakeLists.txt  README.md  Utils.hpp
include/: BaseState.hpp  C_Base.hpp  Communicator.hpp  Component.hpp  EntityManager.hpp  EntityMessage.hpp  MessageHandler.hpp  Observer.hpp  RandomGenerator.hpp  ResourceManager.hpp  S_Base.hpp  ServiceLocator.hpp  StateManager.hpp  SystemManager.hpp  TextureManager.hpp  Utils.hpp  Window.hpp
